<?xml version="1.0" encoding="utf-8"?>

<!--
  - @author Ondrej Kosatka
  - @todo Vzit vsechny texty z kodu
  -->
<resources>
	<string name="app_name">LaPardon</string>

	<!-- Menu -->
	<string name="about">About</string>
	<string name="runtime">Runtime</string>
	<string name="simulate">Simulate</string>
	<string name="quit">Quit</string>

	<!-- Queue -->
	<string name="queue">Queue</string>
	<string name="refresh">Refresh</string>
	<string name="removeAll">Remove all</string>
	<!-- tweet context menu -->
	<string name="remove">Remove</string>
	<string name="prioritize">Prioritize</string>
	<string name="execute">Execute</string>

	<!-- Preferences -->
	<string name="preferences">Preferences</string>
	<string name="hashtag">Hashtag</string>
	<string name="hashtagSummary">Twitter request hashtag searched by application (e.g. #lapardon)</string>
	<string name="interval">Interval</string>
	<string name="intervalSummary">Twitter search interval [s] (e.g. 30)</string>
	<string name="gddHashtag">GDD Hashtag</string>
	<string name="gddHashtagSummary">Twitter GDD hashtag produced by application (e.g. #gddcz)</string>
	<string name="playHashtag">Play Hashtag</string>
	<string name="playHashtagSummary">Twitter play hashtag produced by application (e.g. #play)</string>
	<string name="infoHashtag">Info Hashtag</string>
	<string name="infoHashtagSummary">Twitter info hashtag produced by application (e.g. #info)</string>
	<string name="warnHashtag">Warn Hashtag</string>
	<string name="warnHashtagSummary">Twitter warning hashtag produced by application (e.g. #warn)</string>
	<string name="errorHashtag">Error Hashtag</string>
	<string name="errorHashtagSummary">Twitter error hashtag produced by application (e.g. #error)</string>
	<string name="pumpMin">Min Pump value</string>
	<string name="pumpMinSummary">Min Pump PWM (arduino) value (e.g. 0)</string>
	<string name="pumpMax">Max Pump value</string>
	<string name="pumpMaxSummary">Max Pump PWM (arduino) value (e.g. 255)</string>

	<!--<string name="lastSearch">Last Search</string>-->
	<!--<string name="lastSearchSummary">Last time Twitter search was performed (format yyyy-MM-dd HH:mm)</string>-->

	<!-- Others -->
	<string name="no_connection_text">There is NO internet connection.</string>
	<string name="no_arduino_text">There is NO Arduino device connected.</string>
	<string name="arduino_text">Arduino device already connected.</string>
	<!--
	 <string name="username">Username</string>
	 <string name="usernameSummary">Twitter account username</string>
	 <string name="password">Password</string>
	 <string name="passwordSummary">Twitter account password</string>
 -->

</resources>
