<?xml version="1.0" encoding="utf-8"?>

<!--
  - @author Ondrej Kosatka
  - @author Libor Kramolis
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference android:key="hashtag"
						android:title="@string/hashtag"
						android:summary="@string/hashtagSummary"
						android:defaultValue="#lapardon"/>
	<EditTextPreference android:key="interval"
						android:title="@string/interval"
						android:summary="@string/intervalSummary"
						android:inputType="number"
						android:defaultValue="30"/>
	<EditTextPreference android:key="gddHashtag"
						android:title="@string/gddHashtag"
						android:summary="@string/gddHashtagSummary"
						android:defaultValue="#MYgddcz"/>
	<EditTextPreference android:key="playHashtag"
						android:title="@string/playHashtag"
						android:summary="@string/playHashtagSummary"
						android:defaultValue="#play"/>
	<EditTextPreference android:key="infoHashtag"
						android:title="@string/infoHashtag"
						android:summary="@string/infoHashtagSummary"
						android:defaultValue="#info"/>
	<EditTextPreference android:key="warnHashtag"
						android:title="@string/warnHashtag"
						android:summary="@string/warnHashtagSummary"
						android:defaultValue="#warn"/>
	<EditTextPreference android:key="errorHashtag"
						android:title="@string/errorHashtag"
						android:summary="@string/errorHashtagSummary"
						android:defaultValue="#error"/>
</PreferenceScreen>
