<?xml version="1.0" encoding="utf-8"?>

<!--
  - @author Libor Kramolis
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menuRuntime"
		  android:icon="@android:drawable/ic_menu_agenda"
		  android:title="@string/runtime"/>
	<item android:id="@+id/menuQueue"
		  android:icon="@android:drawable/ic_menu_slideshow"
		  android:title="@string/queue"/>
	<item android:id="@+id/menuSimulate"
		  android:icon="@android:drawable/ic_menu_manage"
		  android:title="@string/simulate"/>

	<item android:id="@+id/menuPreferences"
		  android:icon="@android:drawable/ic_menu_preferences"
		  android:title="@string/preferences"/>
	<item android:id="@+id/menuAbout"
		  android:icon="@android:drawable/ic_menu_info_details"
		  android:title="@string/about"/>

	<item android:id="@+id/menuRefresh"
		  android:icon="@android:drawable/ic_menu_rotate"
		  android:title="@string/refresh"/>
	<!-- ic_menu_refresh NENI public :-( Zatim davam rotate! -->
	<item android:id="@+id/menuRemoveAll"
		  android:icon="@android:drawable/ic_notification_clear_all"
		  android:title="@string/removeAll"/>
	<item android:id="@+id/menuQuit"
		  android:icon="@android:drawable/ic_menu_close_clear_cancel"
		  android:title="@string/quit"/>

</menu>
